[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/enemy-small.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/backgrounds/desert-backgorund.png" type="Texture" id=2]
[ext_resource path="res://other/player_controller.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/level-1.gd" type="Script" id=4]
[ext_resource path="res://other/spawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/pixelart.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 6 )

[node name="level_root" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 4 )

[node name="parallax" type="ParallaxBackground" parent="."]

[node name="background" type="ParallaxLayer" parent="parallax"]
motion_mirroring = Vector2( 0, 544 )

[node name="desert" type="Sprite" parent="parallax/background"]
modulate = Color( 0.980392, 0.941176, 0.941176, 1 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 256, 544 )
__meta__ = {
"_edit_lock_": true
}

[node name="hud" type="CanvasLayer" parent="."]

[node name="respanw_screen" type="Control" parent="hud"]
visible = false
margin_right = 160.0
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="overlay" type="ColorRect" parent="hud/respanw_screen"]
margin_right = 160.0
margin_bottom = 320.0
color = Color( 0.0862745, 0.0196078, 0.0196078, 0.627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="respawn_hud" type="CenterContainer" parent="hud/respanw_screen"]
margin_right = 160.0
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="countdown" type="Label" parent="hud/respanw_screen/respawn_hud"]
margin_left = 70.0
margin_top = 146.0
margin_right = 90.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 1 )
text = "5"

[node name="player_projectiles" type="Node2D" parent="."]

[node name="enemies" type="Node2D" parent="."]
z_index = 2

[node name="spawner" parent="enemies" instance=ExtResource( 5 )]
position = Vector2( 62.8381, 8.84799 )
SpawnObj = ExtResource( 1 )
vel_angle = 90.0
acc_mag = 60.0
autostart = true
spawn_count = 5
spawn_delay = 0.5

[node name="spawner2" parent="enemies" instance=ExtResource( 5 )]
position = Vector2( 203.901, 8.84799 )
SpawnObj = ExtResource( 1 )
vel_angle = 90.0
acc_mag = 60.0
acc_angle = 180.0
autostart = true
spawn_count = 5
spawn_delay = 0.5

[node name="player_controller" parent="." instance=ExtResource( 3 )]

[node name="respawn_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="timeout" from="respawn_timer" to="." method="_on_respawn_timer_timeout"]
